--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Quản lý sản phẩm</h1>
     <form id="product-form">
+        <input type="hidden" id="product-id"/>
         <div class="form-control">
             <label>Tên sản phẩm</label>
             <input type="text" id="product-name"  required/>
